grammar.js
		source_file: $ =>
			seq(
				// Allow a single "global options" block at the beginning of the file.
				optional($.global_options),

				// Allow any snippet definitions, named routes, and top-level
				// import directives before any site block has been declared.
				repeat(choice($.snippet_definition, $.named_route, $.import_directive)),

				// Once a single site is started, snippets, named routes,
				// import directives, and other site blocks can be declared.
				optional(choice($.single_site, seq($.site_block, repeat(choice($.site_block, $.snippet_definition, $.named_route, $.import_directive))))),
			),

		// Global options is a special block that only allows the use of directives.
		// Defining snippets or named matchers is not allowed in it's scope.
		//
		// https://caddyserver.com/docs/caddyfile/concepts#snippets
		global_options: $ => seq('{', token.immediate(NEW_LINE_REGEX), repeat($.directive), '}'),

		// Snippets are re-usable parts of a caddyfile, the content of a snippet can be anything
		// that is allowed inside of a site block.
		//
		// Snippets must be defined outside of a site block and after global options (if present).
		snippet_name: _ => token(seq('(', /[a-zA-Z0-9\-_]+/, ')')),
		snippet_definition: $ => seq(field('name', $.snippet_name), $.block),

		// Experimental; named routes use a syntax similar to snippets.
		//
		// Named routes are a special block, defined outside of site blocks.
		//
		// https://caddyserver.com/docs/caddyfile/concepts#named-routes
		named_route_identifier: _ => token(seq('&(', /[a-zA-Z0-9\-_]+/, ')')),
		named_route: $ => seq(field('name', $.named_route_identifier), $.block),

		//
		// Addresses
		//

		network_address: _ =>
			choice(
				token(
					seq(
						choice(IPV4_REGEX, IPV6_ADDRESS, hostname),
						optional(seq(':', PORT_REGEX)),
						repeat(seq('/', /([A-Za-z0-9\-_.~!&'\(\)*+,;=:#]|%[0-9a-fA-F]{2})*/)),
					),
				),
				token(
					seq(
						choice('http', 'https', 'h2c'),
						'://',
						choice(IPV4_REGEX, IPV6_ADDRESS, bareHostname),
						optional(seq(':', PORT_REGEX)),
						repeat(seq('/', /([A-Za-z0-9\-_.~!&'\(\)*+,;=:#]|%[0-9a-fA-F]{2})*/)),
					),
				),

				token(seq(field('network', choice('fd', 'fdgram')), '/', field('address', /[0-9]+/))),

				token(
					seq(
						field('network', choice('unix', 'unix+h2c', 'unixgram', 'unixpacket')),
						'/',
						field('address', /\/[a-zA-Z0-9_\-./*]+/),
						optional(seq('|', field('perms', /[0-9]{3,4}/))),
					),
				),

				token(
					seq(
						field('network', choice('ip', 'ip4', 'ip6', 'tcp', 'tcp4', 'tcp6', 'udp', 'udp4', 'udp6')),
						'/',
						field('address', seq(choice(IPV4_REGEX, IPV6_ADDRESS, bareHostname), optional(seq(':', PORT_REGEX)))),
					),
				),

				token(field('address', seq(bareHostname, ':', PORT_REGEX))),
			),

		site_address: $ =>
			choice(
				// Bare protocols
				'http://',
				'https://',
				// TODO: is `h2c://` also supported here?

				// Bare port
				token(seq(':', PORT_REGEX)),

				// `:{$ENV_VAR}`
				seq(optional(':'), $._environment_variable),

				// `{$ENV_VAR}:PORT`
				seq($._environment_variable, token.immediate(seq(':', PORT_REGEX))),

				// Environment variable.
				//
				// According to the Caddy docs, placeholders cannot be used in addresses,
				// but you can use environment variables. `{$ENV_VAR}`, not `{env.ENV_VAR}`
				$._environment_variable,

				token(
					seq(
						// TODO: I understand allowing http and https but why all schemes?
						optional(URL_SCHEME_REGEX),
						choice(
							IPV4_REGEX,
							IPV6_ADDRESS,
							// Hostname regex, allows:
							// - Bare domains (localhost, my-system, etc),
							// - Domains (example.com)
							// - Subdomains (sub.example.com)
							// - Punycode (example.xn--ses554g)
							//
							// Also allows for a wildcard (*) as the furthest left subdomain.
							seq(choice('*', DOMAIN_SECTION_REGEX), repeat(seq('.', DOMAIN_SECTION_REGEX)), optional(seq('.', tld))),
						),
						optional(seq(':', PORT_REGEX)),
					),
				),
			),

		//
		// Literals
		//

		interpreted_string_literal: $ => seq('"', repeat(choice($._interpreted_string_literal_basic_content, $.escape_sequence)), token.immediate('"')),
		_interpreted_string_literal_basic_content: _ => token.immediate(prec(1, /[^"\n\\]+/)),

		escape_sequence: _ => token.immediate(seq('\\', choice(/[^xuU]/, /\d{2,3}/, /x[0-9a-fA-F]{2,}/, /u[0-9a-fA-F]{4}/, /U[0-9a-fA-F]{8}/))),

		comment: _ => token(seq('#', /.*/)),

		// Argument is pretty much anything that isn't a matcher.
		//
		// NOTE: `{` and `}` are only allowed as *continuation* characters (i.e.
		// they cannot start an argument) so the lexer never mistakes a block's
		// opening brace for the start of a new argument, while still allowing
		// them to appear later in an argument (e.g. a `path_regexp` pattern like
		// `\.([a-f0-9]{6})\.(css|js)$`). Since a block's `{` is always preceded
		// by whitespace in valid Caddyfiles, `argument` naturally stops before it.
		argument: _ =>
			choice(
				// Normal arguments without @ or starting with non-@ characters
				// Allows ? prefix for Caddy's header directive syntax (?Header-Name)
				// Also allows regular-expression punctuation (`^ % | ( ) [ ]`) so
				// matcher arguments like `/foo/(bar|baz).*` or `/foo/[0-9]+` lex correctly.
				/\??[\^a-zA-Z\-_%+.\\\/*:$0-9|\(\)\[\]?,]([\^a-zA-Z\-_%+.\\\/*:$0-9@|\(\)\[\]\{\}?,]*)/,

				// Arguments starting with @ that contain more @ characters
				// (like @longhorn-ui@/share/share/lib/longhorn-ui)
				/@[\^a-zA-Z\-_%+.\\\/*:$0-9|\(\)\[\]?,]*@[\^a-zA-Z\-_%+.\\\/*:$0-9@|\(\)\[\]\{\}?,]*/,
			),

		// Fallback status code, primarily used with `try_files` as the last argument.
		status_code_fallback: _ => token(seq('=', /[0-9]{3}/)),

		// Placeholder is used for environment variables or runtime value substitution
		placeholder: $ => $._placeholder,
		_placeholder: _ =>
			token(
				seq(
					'{',
					// TODO: this is probably not the best way to write this.
					//
					// You cannot nest placeholders in each other, but you can nest
					// environment variables. Environment variables are replaced separately
					// of placeholders when the Caddyfile is parsed which is how this works.
					//
					// The issue with this grammar is that the environment variable can only
					// be at the end of the placeholder, but the Caddyfile parser allows
					// there to be any number of environment variables inside of a
					// placeholder.
					token.immediate(/[a-zA-Z0-9][a-zA-Z0-9_.\[\]]*/),
					optional(environmentVariable),
					'}',
				),
			),
		_environment_variable: _ => environmentVariable,

		// Top-level import directive (import can appear anywhere in Caddyfile,
		// including between site blocks at the top level).
		directive_name: _ => /\??[a-zA-Z_\-+]+/,
		directive: $ => seq(field('name', $.directive_name), ...directiveFields($)),

		// https://caddyserver.com/docs/caddyfile/matchers#path-matchers
		//
		// This is given a higher lexical precedence than `argument` so that it
		// wins the (typically equal-length) tie against `argument` when used as
		// a directive's leading matcher (e.g. `reverse_proxy /path 127.0.0.1`).
		// It must NOT be used anywhere alongside `argument` where a longer
		// `argument` match is possible (such as inside `matcher_directive`
		// fields), since lexical precedence always wins over match length and
		// would wrongly truncate longer arguments (e.g. regular expressions
		// like `/foo/(bar|baz).*` used with `path_regexp`).
		matcher: $ =>
			choice(
				// Allow a lone `*`
				'*',
				// Path matching
				alias($.path, $.path_matcher),
				// Named matcher
				$.matcher_identifier,
			),

		//
		// Sites
		//

		// Unnamed directives handle lines in blocks that start with a string
		// literal instead of a directive name. This is common in plugin config
		// blocks (e.g. `links { "Label" "/path" icon "class" }`).
		_definition: $ => choice($.directive, $.named_matcher, $.unnamed_directive),

		// Block is a site block that is allowed to define directives and named matchers.
		block: $ => seq('{', token.immediate(NEW_LINE_REGEX), field('body', repeat($._definition)), '}'),

		single_site: $ => seq(field('name', commaSep1($.site_address)), field('body', repeat($._definition))),

		site_block: $ => seq(field('name', commaSep1($.site_address)), $.block),

		//
		// Heredocs (implementation is in `src/scanner.c`)
		//

		// TODO: what happens if there is a leading `\` (heredoc escape)?
